[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Salary and Wage Scatterplot"
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
matplotlib = "3.3.0"
python = "^3.8"
seaborn = "^0.10.1"
pandas = "^1.1.0"
[tool.poetry.dev-dependencies]
